# ghci-in-a-new-dress

./: .gitignore  README.md  ghci-in-a-new-dress.cabal  haddockParser.hs  main.hs  test.html
static/: index.html  main.js  style.css
